luci-theme: alignment fixes
These help to align read-only items with their title elements.

(cherry picked from commit 7f0c172ee1a7a867cb61f404b3a5981c45158858)

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -545,6 +545,7 @@ select {
 	display: flex;
 	flex-wrap: wrap;
 	margin-bottom: 18px;
+	align-items: baseline;
 }
 
 .cbi-value-field {
