--- a/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
+++ b/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
@@ -1254,6 +1254,7 @@ td > table > tbody > tr > td,
 	display: inline-block;
 	width: 100%;
 	padding: .35rem 1rem .2rem 1rem;
+	align-items: baseline;
 }
 
 .cbi-value ul {
